___________________________________
|      |  |  |     |  _  |     |  |
|  |___|  |  |  |  |    _|  |  |  |    GNU GLOBAL source code tag system
|  |   |  |  |  |  |     |     |  |
|  ~~  |   ~~|     |  ~  |  |  |   ~~|          for all hackers.
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 Copyright (c) 2000, 2001, 2002, 2003, 2004, 2005, 2006, 2007, 2008
	Tama Communications Corporation

 This file is free software; as a special exception the author gives
 unlimited permission to copy and/or distribute it, with or without
 modifications, as long as this notice is preserved.

 This program is distributed in the hope that it will be useful, but
 WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
 implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

		----------------------------------

ChangeLog about GNU GLOBAL

September 27 2008, by Shigio YAMAGUCHI

	* Changed the default cache size of DB library from 5M to 50M bytes.
	* Recovered the code in which pread/pwrite is used in BSD db library.
	  However, this code is not automatically used. To include the code,
	  please invoke configure script with the --with-pread-pwrite option.
	  The original code was written by Hideki IWAMOTO.

July 14 2008, by Shigio YAMAGUCHI

	* Changed to skip all files whoes first character of name is '.'.

	The following path was deleted from the DEFAULTSKIP in configure.ac, since new
	rule covers them.

	.notfunction
	.gdbinit
	.cvsrc
	.cvsignore
	.gitignore
	.cvspass
	.cvswrappers
	.deps/
	.snprj/
	.svn/
	.git/

April 21 2008, by Shigio YAMAGUCHI

	* gtags.vim: Stopped use of temporary file.

March 25 2008, by Shigio YAMAGUCHI

	* gtags.vim, gtags.pl: rewritten using new '--from-here' option of global(1).
	* Added htags/ghtml.cgi.tmpl.
	* Described the method of apache setting as a comment in htags/global.cgi.tmpl.in.
	* Modifications to allow symbolic link.
	  To realize it, normalize_path() and abs2rel() in libutil/abs2rel.c module is used