@@ -4,7 +4,7 @@ ___________________________________
 |  |   |  |  |  |  |     |     |  |
 |  ~~  |   ~~|     |  ~  |  |  |   ~~|          for all hackers.
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
- Copyright (c) 2000, 2001, 2002, 2003, 2004, 2005, 2006, 2007, 2008
+ Copyright (c) 2000, 2001, 2002, 2003, 2004, 2005, 2006, 2007, 2008, 2009
 	Tama Communications Corporation
 
  This file is free software; as a special exception the author gives
@@ -18,6 +18,11 @@ ___________________________________
 		----------------------------------
 
 ChangeLog about GNU GLOBAL
+
+February 18 2009, Shigio YAMAGUCHI
+
+	* Rewrote the stack in libutil/find.c using the varray (libutil/varray.c)
+	  instead of static array.
 
 September 27 2008, by Shigio YAMAGUCHI
 
